Added test for noStarvingWriters.  Success.  On to Aliens.

--- a/home/Makefile
+++ b/home/Makefile
@@ -3,11 +3,12 @@
 # Felix Yeung (fyeung)
 # Gabe Saluta (gsaluta)
 
-test : prog_A.c prog_B.c prog_C.c prog_D.c
+test : prog_A.c prog_B.c prog_C.c prog_D.c noStarvingWriters.c
 	gcc -o A prog_A.c
 	gcc -o B prog_B.c
 	gcc -o C prog_C.c
 	gcc -o D prog_D.c
+	gcc -o noStarvingWriters noStarvingWriters.c
 
 clean :
-	rm -f A B C D
+	rm -f A B C D noStarvingWriters.c
